--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -20,6 +20,7 @@
   \emph{Mécanique, Fondements et applications}.
   Masson Sciences,
   $6^{e}$ édition, 2001 (ISBN 2-10-005464-3),
-  chap. 1 ("Calcul vectoriel. Torseurs") - section IV, V et VI, p. 8-15, 295
+  chap. 1 ("Calcul vectoriel. Torseurs") - section IV, V et VI - p. 8-15, 
+  chap. 16 (Cinématique du solide et des solides en contact) - section I - p. 257, 295
   
 \end{thebibliography}
