--- a/tex/macros.tex
+++ b/tex/macros.tex
@@ -1,3 +1,30 @@
+%=============== variable fichier de figures ==============================
+
+\newcommand{\myFiguresFile}{}
+\newcommand{\setmyFiguresFile}[1]{\renewcommand{\myFiguresFile}{#1}}
+
+%=============== include 1 figure =========================================
+
+\ifx \incFig \undefined
+\def \incFig [#1]#2{\includegraphics[width=#2, page=#1]{figs/\myFiguresFile}}
+\fi
+
+%=============== Display 1 figure =========================================
+
+\ifx \dispFig \undefined
+\def \dispFig [#1]#2#3#4#5%
+{
+\begin{figure}[#1]
+  \begin{center}
+  \includegraphics[width=#3, page=#2]{figs/\myFiguresFile}
+  \IfStrEq{#4}{}{}{%
+    \caption{#4}  % legende
+    \label{#5}    % pour citer le numéro de figure
+  }
+  \end{center}
+\end{figure}
+}
+\fi
 
 %=============== 2 sous-figures alignées horizontalement =================
 
@@ -6,8 +33,8 @@
 {
 \begin{figure}[#1]
 \begin{center}
-  \subfloat[#3 \label{#7.a}]{\includegraphics[width=7cm, page=#2]{figs/figures}}\hspace{1cm}
-  \subfloat[#5 \label{#7.b}]{\includegraphics[width=7cm, page=#4]{figs/figures}}\hspace{1cm}
+  \subfloat[#3 \label{#7.a}]{\includegraphics[width=7cm, page=#2]{figs/\myFiguresFile}}\hspace{1cm}
+  \subfloat[#5 \label{#7.b}]{\includegraphics[width=7cm, page=#4]{figs/\myFiguresFile}}\hspace{1cm}
   \caption{#6}  % legende \\
   \label{#7} % pour citer le numéro de figure
 \end{center}
@@ -22,9 +49,9 @@
 {
 \begin{figure}[#1]
 \begin{center}
-  \subfloat[#3 \label{#9.a}]{\includegraphics[width=5cm, page=#2]{figs/figures}}\hspace{1cm}
-  \subfloat[#5 \label{#9.b}]{\includegraphics[width=5cm, page=#4]{figs/figures}}\hspace{1cm}
-  \subfloat[#7 \label{#9.c}]{\includegraphics[width=5cm, page=#6]{figs/figures}}\\
+  \subfloat[#3 \label{#9.a}]{\includegraphics[width=5cm, page=#2]{figs/\myFiguresFile}}\hspace{1cm}
+  \subfloat[#5 \label{#9.b}]{\includegraphics[width=5cm, page=#4]{figs/\myFiguresFile}}\hspace{1cm}
+  \subfloat[#7 \label{#9.c}]{\includegraphics[width=5cm, page=#6]{figs/\myFiguresFile}}\\
   \caption{#8}  % legende
   \label{#9}    % pour citer le numéro de figure
 \end{center}
@@ -35,44 +62,21 @@
 %=============== 2 ou 3 colonnes alignée horizontalement ==================
 
 \ifx \minipages \undefined
-\def \minipages [#1]#2#3#4#5#6#7%
+\def \minipages [#1]#2#3#4#5#6#7#8%
 {
-\begin{minipage}{#2\textwidth}
-  #5
-\end{minipage}
-\begin{minipage}{#3\textwidth} \hfill
+\begin{minipage}[#2]{#3\textwidth}
   #6
+\end{minipage}
+\begin{minipage}[#2]{#4\textwidth} \hfill
+  #7
 \end{minipage}
 \IfStrEq{#1}{3}%
 {
-\begin{minipage}{#4\textwidth} \hfill
-  #7
+\begin{minipage}[#2]{#5\textwidth} \hfill
+  #8
 \end{minipage}
 }
 }
-\fi
-
-%=============== Display 1 figure =========================================
-
-\ifx \dispFig \undefined
-\def \dispFig [#1]#2#3#4#5%
-{
-\begin{figure}[#1]
-  \begin{center}
-  \includegraphics[width=#3, page=#2]{figs/figures}
-  \IfStrEq{#4}{}{}{%
-    \caption{#4}  % legende
-    \label{#5}    % pour citer le numéro de figure
-  }
-  \end{center}
-\end{figure}
-}
-\fi
-
-%=============== include 1 figure =========================================
-
-\ifx \incFig \undefined
-\def \incFig [#1]#2{\includegraphics[width=#2, page=#1]{figs/figures}}
 \fi
 
 %=============== exemples ==================================================
@@ -101,6 +105,8 @@
 \newcommand{\valTextwidth}[0]{\thetextwidth}
 
 \newcommand{\valTextwidthUnit}[1]{\printinunitsof{#1}\prntlen{\textwidth}}
+
+\newcommand{\valInUnit}[2]{\printinunitsof{#1}\prntlen{#2}}
 
 %affichage des largeurs de zone texte
 %\usepackage{layouts}
